# rotors_simulator_qp

rotors_control/: CMakeLists.txt  package.xml
rotors_control/cfg/: cbf_clf.cfg
rotors_control/include/rotors_control/: lee_position_controller.h
rotors_control/src/nodes/: lee_position_controller_node.cpp  lee_position_controller_node.h
rotors_control/src/qpOASES/: CMakeLists.txt
rotors_control/src/qpOASES/examples/: example1.cpp  example1a.cpp
rotors_control/src/qpOASES/src/: BLASReplacement.cpp
rotors_description/urdf/: pelican_with_rgbd.xacro
rotors_gazebo/launch/: mav_hovering_example2.launch  pelican_rgbd_waypoint_follower.launch
rotors_gazebo/src/: hovering_example.cpp  waypoint_publisher.cpp
